  at the start of the script to reflect your site.

  Note the first line of the log message will be used as the topic
  title.  The entire log message is used as the topic description.
  Any strings of the form "Bug nnn" in the log message will be taken
  as a reference to a bug id, and will be used in the topic's bugid
  field.

Version 1.8.3

* It is now possible to specify multiple metrics associated with a
  comment "thread".  In previous versions of Codestriker, there was a
  configuration variable called @comment_states which had the default
  values of "Submitted", "Invalid", or "Completed".  These states
  still exist, but under the metric name "Status" by default.

  Some other example configurations are illustrated in the config
  file.  For example "Level", "Mode" and "Type" metrics.  These values
  are then accumulated in the "Topic Information" tab, along with all
  the other topic metrics.

  Apart from the add/edit comment screen, the topic comments screen
  allows you to modify any metric associated with any comment thread,
  via a series of dropdown form elements.

* It is now possible in the create topic screen to only specify a
  single tag and a module name in order to create a new topic, rather
  than both the start and end tags, with the module name.  The effect
  of a single tag is to create a topic with the full contents of all
  tagged files in the specified module.

* In the "Topic Properties" screen, if the Bug IDs field is being
  displayed, and $Codestriker::bugtracker is defined, then after this
  field will be a number of hyperlinks to the associated bug tracking
  records.

* Added the link "List open topics in project" to all the view topic
  screens for user convenience on large multi-project deployments.

* Refactored CvsPserver and CvsLocal into a single object, Cvs.

* It is now possible to specify CVS repositories using the :ext access
  method with ssh, providing that the user running the Codestriker web