@@ -25,7 +25,7 @@
 <INPUT TYPE="hidden" NAME="sbody" VALUE="[% sbody | html_entity %]">
 <INPUT TYPE="hidden" NAME="sfilename" VALUE="[% sfilename | html_entity %]">
 
-<H1>Topic list</H1>
+<H1>Topic list <font size="-1">(<a href="[% list_sort_url_rss %]">rss</a>)</font></H1>
 
 <P>
 
